--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,13 @@
         <link rel="stylesheet" href="/assets/css/main.css">
         <script src="/assets/js/main.js" defer></script>
 
+        <!-- highlight.js | https://highlightjs.org -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/dark.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
+        <!-- individual languages not included in above, see: https://github.com/highlightjs/cdn-release/blob/main/DIGESTS.md -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/languages/apache.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/languages/powershell.min.js"></script>
+
         <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="194x194" href="/favicons/favicon-194x194.png">
@@ -60,5 +67,6 @@
         
         {% include navbar.html %}
 
+        <script>hljs.highlightAll();</script>
     </body>
 </html>
