--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,11 +13,11 @@
         <script src="/assets/js/main.js" defer></script>
 
         <!-- highlight.js | https://highlightjs.org -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/dark.min.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
-        <!-- individual languages not included in above, see: https://github.com/highlightjs/cdn-release/blob/main/DIGESTS.md -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/languages/apache.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/languages/powershell.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/dark.min.css" integrity="sha512-bfLTSZK4qMP/TWeS1XJAR/VDX0Uhe84nN5YmpKk5x8lMkV0D+LwbuxaJMYTPIV13FzEv4CUOhHoc+xZBDgG9QA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js" integrity="sha512-yUUc0qWm2rhM7X0EFe82LNnv2moqArj5nro/w1bi05A09hRVeIZbN6jlMoyu0+4I/Bu4Ck/85JQIU82T82M28w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <!-- individual languages not included in above, see for full list: https://cdnjs.com/libraries/highlight.js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/languages/apache.min.js" integrity="sha512-60vwMar2mN+6WaGRpGtvc6kg1dF0PLkZCqXuILUr9h4+TQm7I7pv8NTvxUoX1ZcHOh+wb/gRhgG2pRzmCXE7GA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/languages/powershell.min.js" integrity="sha512-Z6UOBeYikCxUn2/LSXtadjVTAPDVy6WVfJC/xhmFbAUACq2kW5vJaOiJFn2CDRLDI+VXIMTHie9p4/gLEGn+YQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
         <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
