--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,16 +1,16 @@
 <nav>
     <div class="navSquare noHover">
-        <img id="monkey" src="/images/monkey.png" alt="Monkey" />
+        <img id="monkey" src="/images/monkey.webp" alt="Monkey" />
     </div>
     <div class="navSquare" id="homeButton">
         <a href="/">
-            <img src="/images/home.png" alt="Home" />
+            <img src="/images/home.webp" alt="Home" />
             <div>Home</div>
         </a>
     </div>
     <div class="navSquare" id="blogButton">
         <a href="/blog/">
-            <img src="/images/blog.png" alt="Blog" />
+            <img src="/images/blog.webp" alt="Blog" />
             <div>Blog</div>
         </a>
     </div>
